fix z-index of dropdown menu fix border of button dropdown menu del angularfire from vendor

--- a/src/app/pages/admin/vv.scss
+++ b/src/app/pages/admin/vv.scss
@@ -110,10 +110,12 @@
     .m-tab--confirmed {
         background-color: rgba(30, 144, 255, .2);
         border: 2px solid rgb(30, 144, 255);
+        border-radius: 0;
     }
     .m-tab--confirmed:hover {
         background-color: rgb(30, 144, 255);
         color: white;
+        z-index: 99;
     }
     .m-tab--confirmed--active {
         background-color: rgb(30, 144, 255); 
